kuber/itunes-api-fetch/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hostnadsame.foo.com
      http:
        paths:
          - backend:
              serviceName: itunes-api-fetch-svc
              servicePort: 80
